<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_parking_size_in_fragment_reservation"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/text_reservation_instruction_enter_security_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_reservation_instruction_enter_security_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reservation_instruction_security_code"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/text_reservation_security_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_reservation_security_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reservation_instruction_enter_security_code" />

    <TextView
        android:id="@+id/text_reservation_instruction_enter_parking_lot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reservation_instruction_parking_lot"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/text_reservation_parking_lot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_reservation_security_code" />

    <EditText
        android:id="@+id/text_reservation_parking_lot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reservation_instruction_enter_parking_lot" />


    <Button
        android:id="@+id/button_reservation_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/reservation_creation_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_reservation_parking_lot" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>